# test-cmake-python

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.rst  hello_world.cpp  hello_world.py  pyproject.toml
.github/workflows/: pypi-publish.yml
